# BlenderFileFinder

./: .gitignore  CMakeLists.txt  README.md  blender-file-finder_1.0.0_amd64.deb  build-deb.sh  install-desktop.sh  uninstall-desktop.sh
resources/: blender-file-finder.desktop  turntable_render.py
src/: app.cpp  app.hpp  blend_parser.cpp  blend_parser.hpp  database.cpp  database.hpp  debug.hpp  main.cpp  preview_cache.cpp  preview_cache.hpp  scan_cache.cpp  scan_cache.hpp  scanner.cpp  scanner.hpp  tag_manager.cpp  tag_manager.hpp  thumbnail_cache.cpp  thumbnail_cache.hpp  version_grouper.cpp  version_grouper.hpp
src/ui/: file_browser.cpp  file_browser.hpp  file_view.cpp  file_view.hpp  search_bar.cpp  search_bar.hpp
